package(default_visibility = ["//visibility:public"])

load("@rules_ocaml//build:rules.bzl",
     "ocaml_ns_archive",
     "ocaml_module",
)

DEPS_1 = [
    "@sexplib//lib/sexplib",
    "@ocaml//unix"
]

############################# Aggregates #############################
ocaml_ns_archive(
    name       = "sexplib_unix",
    ns_name    = "sexplib_unix",
    manifest = [
        ":Sexplib_unix_conv"
    ],
)

######################## Modules & Signatures ########################
ocaml_module(
    name          = "Sexplib_unix_conv",
    struct        = "sexplib_unix_conv.ml",
    deps          = DEPS_1,
)

